--- a/section-02/lab01/Jenkinsfile
+++ b/section-02/lab01/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
       NEW_VERSION = "1.3.0"
       dockerRegistry="https://index.docker.io/v1/"
       tag="0.1.2"
-      image="nexweb1/sample"
+      image="jjeongvely030/sample"
       namespace="default"
       deployment="deployment/sample.yaml"
       service="deployment/service.yaml"
@@ -24,7 +24,7 @@ pipeline {
     stage("Git-clone") {
       steps {
         echo "Git clone from gitlab repository"
-        git branch: 'dev', url: 'https://github.com/yoonjk/jenkins-handson.git'
+        git branch: 'dev', url: 'https://github.com/yoohojeong/jenkins-handson.git'
       }
     }
 
