--- a/deployment/pipeline.properties
+++ b/deployment/pipeline.properties
@@ -4,7 +4,7 @@ baseDeployDir=/deployment
 
 # docker info
 credentialRegistry=docker-credentials
-image=docker.io/nexweb1/sample
+image=docker.io/jjeongvely030/sample
 version=0.1.2
 dockerRegistry=https://index.docker.io/v1/
 dockerFile=deployment/Dockerfile
